[package]
name = "rustsym"
version = "0.3.2"
description = "Tool to query symbols from rust code for use in IDEs"
authors = ["Trixnz"]
repository = "https://github.com/trixnz/rustsym"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
syntax = { package = "rustc-ap-syntax", version = "580.0.0" }
rustc-serialize = "0.3.24"
clap = "2.33.0"
walkdir = "2.2.9"
syncbox = "0.2.4"
num_cpus = "1.10.1"

[dev-dependencies]
tempfile = "3.1.0"
